versions of XINS.

$Id$

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 1.1.0 ALPHA 5:

* XINS/Java Common Library:
  - Changed some classes to throw a ProgrammingError instead of an Error, if
    appropriate.

* XINS/Java Client Framework:
  - Changed some classes to throw a ProgrammingError instead of an Error, if
    appropriate.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 1.1.0 ALPHA 4:

* XINS/Java Common Library:
  - Added class CallConfig in package org.xins.common.service. Objects of this
    type specify certain aspects of how a call is executed. For example, for
    an HTTP service caller, a CallConfig object could specify what HTTP method
    (GET, POST, etc.) to use.
  - Added HTTPCallConfig class (derives from CallConfig).
  - Changed ServiceCaller to work with CallConfig objects. Some members have
    been deprecated in favour of newer ones that work with CallConfig objects.
    Greatly improved the documentation in the ServiceCaller class [work in
    progress].
  - Added UnsupportedProtocolException in org.xins.common.service package.
    Documented in ServiceCaller class that this exception should be thrown by
    ServiceCaller subclasses if a TargetDescriptor with an unsupported
    protocol is passed.
  - Changed TargetDescriptor to support capitals in the protocol part of the
    URL. This fixes SF.net bug #1075248.
  - Added ProgrammingError class. An instance of this class should be thrown
    when appropriate, especially after any of the log messages 1050, 1052,
    2050, 2052, 3050 and 3052 [work in progress].

* XINS/Java Client Framework:
  - Fixed SF.net bug #1071731: UnacceptableResultXINSCallException constructor
    threw a NullPointerException instead of the documented
    IllegalArgumentException.
  - The AbstractCAPICallResult class adds the following methods: