@@ -27,7 +27,7 @@
 	<translation entry="3202">XINS/Java Server Framework cannot be bootstrapped. Application server is behaving unexpectedly. Reason: <value-of-param name="detail" format="quoted" />.</translation>
 	<translation entry="3203">Application server implements unexpected version of Java Servlet API Specification. Expected version: <value-of-param name="expected_version" />. Actual version: <value-of-param name="actual_version" />.</translation>
 	<translation entry="3204">XINS/Java Server Framework cannot be bootstrapped. System administration issue detected. The system property <value-of-param name="propertyName" format="quoted" />, which defines the location of the runtime properties file, cannot be read due to a security restriction.</translation>
-	<translation entry="3205">XINS/Java Server Framework cannot be bootstrapped. System administration issue detected. The system property <value-of-param name="propertyName" format="quoted" />, which defines the location of the runtime properties file, is not set.</translation>
+	<translation entry="3205">XINS/Java Server Framework cannot be bootstrapped. System administration issue detected. The property <value-of-param name="propertyName" format="quoted" />, which defines the location of the runtime properties file, is not set.</translation>
 	<translation entry="3206">XINS/Java Server Framework cannot be bootstrapped. Invalid application package. The build property <value-of-param name="propertyName" format="quoted" />, which defines the name of the API class, is not set.</translation>
 	<translation entry="3207">XINS/Java Server Framework cannot be bootstrapped. Invalid application package. The build property <value-of-param name="propertyName" format="quoted" />, which defines the name of the API class, is set to <value-of-param name="apiClass" format="quoted" />, but that class cannot be loaded.</translation>
 	<translation entry="3208">XINS/Java Server Framework cannot be bootstrapped. Invalid application package. The build property <value-of-param name="propertyName" format="quoted" />, which defines the name of the API class, is set to <value-of-param name="apiClass" format="quoted" />, but that class does not derive from class <value-of-param name="superClass" />.</translation>
@@ -52,8 +52,10 @@
 	<translation entry="3227">XINS/Java Server Framework <value-of-param name="version" /> is not a production release.</translation>
 	<translation entry="3228">Package was built with XINS <value-of-param name="version" />, which is not a production release.</translation>
 	<translation entry="3229">Package was built with XINS <value-of-param name="buildVersion" /> which is more recent version than the running version XINS <value-of-param name="currentVersion" />.</translation>
+	<translation entry="3230">The system property <value-of-param name="propertyName" format="quoted" />, which defines the location of the runtime properties file, cannot be read due to a security restriction.</translation>
+	<translation entry="3231">Getting the location of the runtime properties file by reading the <value-of-param name="propertyName" format="quoted" /> property from the bootstrap properties.</translation>
 
-	<translation entry="3300">Initializing logging subsystem.</translation>
+	<translation entry="3300">Initializing logging subsystem with the settings set in the <value-of-param name="configFile" format="quoted" /> file.</translation>
 	<translation entry="3301">Logging subsystem cannot be initialized. System administration issue detected. Runtime properties file (<value-of-param name="configFile" format="quoted" />) cannot be opened.</translation>
 	<translation entry="3302">Logging subsystem cannot be initialized. System administration issue detected. Runtime properties file (<value-of-param name="configFile" format="quoted" />) cannot be read due to a security restriction.</translation>
 	<translation entry="3303">Logging subsystem cannot be initialized. System administration issue detected. Runtime properties file (<value-of-param name="configFile" format="quoted" />) cannot be read due to an I/O error.</translation>
