@@ -27,7 +27,7 @@
 	<translation entry="3202">Le XINS/Java Server Framework ne peut pas être démarré. Le server d'application se comporte de manière non attendu. Raison: <value-of-param name="detail" format="quoted" />.</translation>
 	<translation entry="3203">Le serveur d'application implémente une version de la spécification Java Servlet API Specification non attendu. Version attendue: <value-of-param name="expected_version" />. Version présente: <value-of-param name="actual_version" />.</translation>
 	<translation entry="3204">Le XINS/Java Server Framework ne peut pas être démarré. Un problème de l'administration du système a été détecté. La propriété système <value-of-param name="propertyName" format="quoted" />, qui défini l'emplacement du fichier des propriétés, ne peut pas être lue à cause de restriction de sécurité.</translation>
-	<translation entry="3205">Le XINS/Java Server Framework ne peut pas être démarré. Un problème de l'administration du système a été détecté. La propriété système <value-of-param name="propertyName" format="quoted" />, qui défini l'emplacement du fichier des propriétés, n'est pas définie.</translation>
+	<translation entry="3205">Le XINS/Java Server Framework ne peut pas être démarré. Un problème de l'administration du système a été détecté. La propriété <value-of-param name="propertyName" format="quoted" />, qui défini l'emplacement du fichier des propriétés, n'est pas définie.</translation>
 	<translation entry="3206">Le XINS/Java Server Framework ne peut pas être démarré. Le paquetage de l'application est invalide. La propriété <value-of-param name="propertyName" format="quoted" />, qui défini le nom de la classe de l'API, n'est pas défini.</translation>
 	<translation entry="3207">Le XINS/Java Server Framework ne peut pas être démarré. Le paquetage de l'application est invalide. La propriété <value-of-param name="propertyName" format="quoted" />, qui défini le nom de la classe de l'API, est défini à <value-of-param name="apiClass" format="quoted" />, mais la classe ne peut pas être chargée.</translation>
 	<translation entry="3208">Le XINS/Java Server Framework ne peut pas être démarré. Le paquetage de l'application est invalide. La propriété <value-of-param name="propertyName" format="quoted" />, qui défini le nom de la classe de l'API, est défini à <value-of-param name="apiClass" format="quoted" />, mais la classes ne dérive pas de la classe <value-of-param name="superClass" />.</translation>
@@ -52,8 +52,10 @@
 	<translation entry="3227">Le XINS/Java Server Framework <value-of-param name="version" /> n'est pas une version de production.</translation>
 	<translation entry="3228">Le paquetage a été construit avec XINS <value-of-param name="version" />, qui n'est pas une version de production.</translation>
 	<translation entry="3229">Le paquetage a été construit avec XINS <value-of-param name="buildVersion" /> qui est une version plus récente que la version de XINS utilisée <value-of-param name="currentVersion" />.</translation>
+	<translation entry="3230">La propriété système <value-of-param name="propertyName" format="quoted" />, qui défini l'emplacement du fichier des propriétés, ne peut pas être lue à cause de restriction de sécurité.</translation>
+	<translation entry="3231">Obtention de l'emplacement du fichier des propriétés en lisant la propriété <value-of-param name="propertyName" format="quoted" /> dans les propriétés de démarrage.</translation>
 
-	<translation entry="3300">Initialisation du sous-système de logging.</translation>
+	<translation entry="3300">Initialisation du sous-système de logging avec les paramètres définis dans le fichier <value-of-param name="configFile" format="quoted" />.</translation>
 	<translation entry="3301">Le sous-système de logging ne peut pas être initialisé. Un problème d'administration du système a été détecté. Le fichier des propriétés (<value-of-param name="configFile" format="quoted" />) ne peut pas être ouvert.</translation>
 	<translation entry="3302">Le sous-système de logging ne peut pas être initialisé. Un problème d'administration du système a été détecté. Le fichier des propriétés (<value-of-param name="configFile" format="quoted" />) ne peut pas être lu à cause de restriction de sécurité.</translation>
 	<translation entry="3303">Le sous-système de logging ne peut pas être initialisé. Un problème d'administration du système a été détecté. Le fichier des propriétés (<value-of-param name="configFile" format="quoted" />) ne peut pas être lu à cause d'une erreur d'E/S.</translation>
